--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "rxjs-study",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "http-server": "^0.11.1"
+  }
 }
