--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "http-server": "^0.11.1"
+  },
+  "scripts": {
+    "start": "http-server -a 127.0.0.1 -p 8091"
   }
 }
