--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "http-server": "^0.11.1"
   },
   "scripts": {
-    "start": "http-server -a 127.0.0.1 -p 8091"
+    "start": "http-server -a 127.0.0.1 -p 8091 -o"
+  },
+  "dependencies": {
+    "rxjs": "^6.4.0"
   }
 }
